# starky-verifier

./: Cargo.toml
src/: deserializer.rs  lib.rs  tests.rs  verifier.rs
src/resources/json/: proof.json  proof_with_pubs.json  pubs.json  pubs_array.json
