[package]
name = "starky-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git = "https://github.com/MVPWorkshop/plonky2", branch = "testing", default-features = false }
starky = { git = "https://github.com/MVPWorkshop/plonky2", branch = "testing", default-features = false }
thiserror = { version = "2.0.4", default-features = false }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.114", default-features = false, features = [
    "alloc",
] }
